--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,11 @@ export(plotable_tess)
 export(point_spacing_2d)
 export(polydeclust2d)
 importFrom(dplyr,arrange)
+importFrom(dplyr,bind_rows)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
-importFrom(ggplot2,fortify)
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
 importFrom(raster,rasterFromXYZ)
@@ -16,6 +16,7 @@ importFrom(raster,rasterToPolygons)
 importFrom(rlang,"!!")
 importFrom(rlang,":=")
 importFrom(rlang,.data)
+importFrom(sf,st_as_sf)
 importFrom(spatstat,Window)
 importFrom(spatstat,area)
 importFrom(spatstat,as.data.frame.im)
