more assertions and better examples

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,11 @@
 export(plotable_tess)
 export(point_spacing_2d)
 export(polydeclust2d)
+importFrom(assertthat,are_equal)
+importFrom(assertthat,assert_that)
+importFrom(assertthat,is.scalar)
+importFrom(assertthat,noNA)
+importFrom(assertthat,not_empty)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,left_join)
@@ -29,6 +34,7 @@ importFrom(spatstat,dirichletWeights)
 importFrom(spatstat,distfun)
 importFrom(spatstat,expand.owin)
 importFrom(spatstat,intersect.owin)
+importFrom(spatstat,is.mask)
 importFrom(spatstat,npoints)
 importFrom(spatstat,owin)
 importFrom(spatstat,ppp)
