--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,7 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Imports:
+    assertthat (>= 0.2),
     dplyr (>= 0.7.6),
     ggplot2 (>= 3.0),
     magrittr (>= 1.5),
