--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ importFrom(spatstat,dirichletAreas)
 importFrom(spatstat,dirichletWeights)
 importFrom(spatstat,distfun)
 importFrom(spatstat,expand.owin)
+importFrom(spatstat,inside.owin)
 importFrom(spatstat,intersect.owin)
 importFrom(spatstat,is.mask)
 importFrom(spatstat,npoints)
